--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,6 +1,8 @@
+/*
 div * {
   border: 1px solid red;
 }
+*/
 
 body,html {
   margin: 0px; 
@@ -8,61 +10,109 @@ body,html {
   background-color: #7f5a83;
   background-image: linear-gradient(315deg, #7f5a83 0%, #0d324d 74%);
   background-repeat: no-repeats;
-}
-
-img {
-  max-width:100%;
-  height:auto;
-}
+  font-family: "Arial", monospace;
+}s
 
 .card_holder {
   display: grid;
-  grid-template-columns:  25% auto 25%;
-  grid-template-rows:  25vh auto 25vh;
+  grid-template-columns:  25% 50% 25%;
+  grid-template-rows:  25vh 50% 25vh;
 }
 
 .card {
   display: grid;
-  grid-template-columns: 50% 50%;
+  z-index: 0;
+  grid-column: 2/2;
+  grid-row: 2/2; 
+  grid-template-columns: 40% auto;
   grid-column-gap: 10px;
-  background-color: aqua;
-  grid-column: 2 / 2;
-  grid-row: 2 / 2; 
-  padding: 30px;
+  background-color:white;
   border-radius: 25px;
+  margin: 10vw;
+  overflow: hidden;
 }
 
 .card_list {
+  display: flex;
+  flex-direction: column;
+  justify-content: top;
   grid-column: 2/3;
   background-color: whitesmoke;
-  
+  margin: 30px;
 }
 
 .card_images {
-  position: relative
-  display: flex;
-  align-items: center;
-  grid-column: 1/2;
-  border-radius: 25px 0px 0px 25px
-  background-color: chocolate;
-  background-image: ;
-  background-repeat: no-repeat;
-  background-position-x: top left;
+  position: relative;
+  grid-column: 1/2;   
+  border-radius: 25px 0px 0px 25px;
   height: 100%;
+  overflow: hidden;
+  background-image: url(images/bg-pattern-desktop.svg);
+  background-position: -140px -50px;
+  background-size: 110%;
+  background-repeat: no-repeat;
+  padding: 20px 0px;
 }
 
 #image1 {
-  position: relative; 
-  z-index: 1;
-  left: -130px;
-  top: 30%;
+  position: absolute; 
+  height: 30px;
+  z-index: 2;
+  left: 20px;
+  top: 300px
 }
 
 #image2 {
   position: relative; 
   z-index: 1;
-  left: 0px; 
+  left: -100px; 
 }
+
+#image3 {
+  position: relative; 
+  height: 50px;
+}
+
+#image2 img {
+  width: 400px;
+}
+
+/* Style for the accordion */
+
+.accordion {
+  cursor: pointer;
+  padding: 15px 0px; 
+  width: 100%;
+  text-align: left;
+  border: none;
+  outline: none;
+  transition: 0.4s;
+}
+
+.active, .accordion:hover {
+  background-color: white;
+}
+
+.accordion:after {
+  content: '\02795'; /* Unicode character for "plus" sign (+) */
+  font-size: 13px;
+  color: #777;
+  float: right;
+  margin-left: 5px;
+}
+
+.active:after {
+  content: "\2796"; /* Unicode character for "minus" sign (-) */
+}
+
+.panel {
+  padding: 0 18px;
+  background-color: white;
+  max-height: 0;
+  overflow: hidden;
+  transition: 0.2s ease-out;
+}
+
 
 /* CSS rules for the footer */
 
