--- a/stylesheet.css
+++ b/stylesheet.css
@@ -6,19 +6,24 @@ div * {
 
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap');
 
+a {
+  color: azure;
+}
 body,html {
   margin: 0px; 
-  height: 100%;
   background-color: #7f5a83;
   background-image: linear-gradient(315deg, #7f5a83 0%, #0d324d 74%);
-  background-repeat: no-repeats;
   font-family: 'Open Sans', sans-serif;
-  font-size: 8px;
+  font-size: 15px;
+  height: 100%;
 }
 
 .card_holder {
   display: grid;
-  
+  grid-template-columns: 20vw auto 20vw;
+  grid-template-rows: 1fr 60vh 1fr;
+  height: 100%;
+  width: 100%;
 }
 
 .card {
@@ -27,11 +32,11 @@ body,html {
   grid-column: 2/2;
   grid-row: 2/2; 
   grid-template-columns: 40% auto;
+  grid-template-rows: 0px auto;
   grid-column-gap: 10px;
   background-color:white;
   border-radius: 25px;
-  margin: 10vw;
-  overflow: hidden;
+  
   box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px;
 }
 
@@ -40,34 +45,41 @@ body,html {
   flex-direction: column;
   justify-content: top;
   grid-column: 2/3;
-  margin: 30px;
+  margin: 10px;
 }
 
 .card_images {
   position: relative;
+  display: flex;
+  align-content: center;
   grid-column: 1/2;   
   border-radius: 25px 0px 0px 25px;
-  height: 100%;
   overflow: hidden;
   background-image: url(images/bg-pattern-desktop.svg);
-  background-position: -140px -50px;
-  background-size: 110%;
+  background-position: -100px 0px ;
+  background-size: 400px 400px;
   background-repeat: no-repeat;
   padding: 20px 0px;
 }
 
 #image1 {
-  position: absolute; 
-  height: 30px;
+  position: relative; 
   z-index: 2;
-  left: 20px;
-  top: 300px
+  top: 180px;
+  left: -100px;
 }
 
 #image2 {
   position: relative; 
   z-index: 1;
   left: -100px; 
+}
+
+#image2 img {
+  position: absolute;
+  top: -50px;
+  bottom: 0;
+  margin: auto;
 }
 
 #image3 {
@@ -82,39 +94,38 @@ body,html {
 /* Style for the accordion */
 
 .faq-container {
-  padding: 15px;
+  
 }
 .question-container {
   display: flex;
-  position: relative;
-  flex-direction: row-reverse;
+  flex-direction: row;
   justify-content: space-between;
-  padding: 4px;
+  flex-wrap: wrap;
   cursor: pointer;
   transition: 400ms;
-  margin: 5px;
-  background-color: burlywood;
+  margin: 15px;
 }
 
-.question-container .question {
-  border: black;
-  font-size: 18px;
+.question {
+  font-size: 12px;
+  font-weight: bold;
+  flex-shrink: 0;
 }
 
-.question-container .question-icon.active {
+.question-icon.active {
   transform: rotate(180deg);
 }
 
 .answer {
+  font-size: 12px;
   max-height: 0;
+  flex-grow: 2;
   overflow: hidden;
   transition: 400ms;
-  background-color: coral;
 }
 
 .answer.active {
   max-height: 200px;
-
 }
 
 
@@ -123,8 +134,8 @@ body,html {
 .footer {
   position: fixed;
   padding: 10px;
-  left: 0vw;
-  bottom: 0vh;
+  left: 0;
+  bottom: 0;
   width: 100%;
   color: white;
   text-align: center;
