--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,10 +1,74 @@
-/*
+
 div * {
   border: 1px solid red;
 }
-*/
+
+
+* {
+  box-sizing: border-box;
+}
+
 
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap');
+
+@media only screen and (max-width: 800px) {
+  .card {
+    display: flex;
+    z-index: 0;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: flex-start;
+    overflow: visible;
+  }
+
+  .card_holder {
+    display: grid;
+    grid-template-columns: 20vw auto 20vw;
+    grid-template-rows: 10vh auto 10vh;
+    width: 100%;
+  }
+
+  .card_images {
+    position: relative;
+    display: flex;
+    z-index: 1;
+    flex-direction: row;
+    justify-content: center;
+    height: 20%;
+    width: 100%;
+    overflow: visible;
+  }
+
+  #image1 {
+    position: relative; 
+    z-index: 2;
+    top: 130px;
+    left: -120px;
+  }
+
+  #image1 img {
+    width: 150px;
+  }
+  #image2 {
+    z-index: 2;
+    position: relative;
+    top: -150px;
+  }
+
+  #image2 img {
+    width: 300px;
+  }
+
+  .card_list {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    margin: 10px;
+    width: 100%;
+  }
+
+}
 
 a {
   color: azure;
@@ -18,43 +82,38 @@ body,html {
   height: 100%;
 }
 
+  
 .card_holder {
-  display: grid;
-  grid-template-columns: 20vw auto 20vw;
-  grid-template-rows: 1fr 60vh 1fr;
-  height: 100%;
-  width: 100%;
+  display: grid; 
+  grid-template-columns: 10% auto 10%;
+  grid-template-rows: 10vh auto 10vh;
 }
-
 .card {
-  display: grid;
+  grid-column: 2 / 3;
+  grid-row: 2 / 3; 
+  display: flex;
+  width: 100%;
+  flex-direction: row;
+  align-items: flex-start;
   z-index: 0;
-  grid-column: 2/2;
-  grid-row: 2/2; 
-  grid-template-columns: 40% auto;
-  grid-template-rows: 0px auto;
-  grid-column-gap: 10px;
+  min-width: 300px;
   background-color:white;
   border-radius: 25px;
-  
   box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px;
 }
-
 .card_list {
-  display: flex;
+  display: inline-flex;
   flex-direction: column;
-  justify-content: top;
+  flex-wrap: wrap;
   grid-column: 2/3;
   margin: 10px;
 }
-
 .card_images {
   position: relative;
   display: flex;
   align-content: center;
   grid-column: 1/2;   
-  border-radius: 25px 0px 0px 25px;
-  overflow: hidden;
+  border-radius: 25px;
   background-image: url(images/bg-pattern-desktop.svg);
   background-position: -100px 0px ;
   background-size: 400px 400px;
@@ -62,24 +121,32 @@ body,html {
   padding: 20px 0px;
 }
 
-#image1 {
-  position: relative; 
-  z-index: 2;
-  top: 180px;
-  left: -100px;
-}
 
-#image2 {
-  position: relative; 
-  z-index: 1;
-  left: -100px; 
-}
+@media screen and (min-width: 800px) {
+  .card {
+    overflow: hidden;
+  }
 
-#image2 img {
-  position: absolute;
-  top: -50px;
-  bottom: 0;
-  margin: auto;
+  #image1 {
+    position: absolute; 
+    z-index: 2;
+    top: 300px;
+    left: 0px;
+  }
+
+  #image1 img {
+    height: 150px;
+  }
+
+  #image2 {
+    position: relative; 
+    z-index: 1;
+    left: -100px;
+  }
+  
+  #image2 img {
+    width: 400px;
+  }
 }
 
 #image3 {
@@ -87,15 +154,13 @@ body,html {
   height: 50px;
 }
 
-#image2 img {
-  width: 400px;
-}
 
 /* Style for the accordion */
 
-.faq-container {
-  
+#faq-title {
+margin-left: 15px;
 }
+
 .question-container {
   display: flex;
   flex-direction: row;
@@ -142,3 +207,7 @@ body,html {
   font-size: xx-small;
   background-color: rgba(255, 255, 255, 0.1);
 }
+
+ /* RESPONSIVE DESIGN */ 
+ 
+
