--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,8 +1,8 @@
-
+/*
 div * {
   border: 1px solid red;
 }
-
+*/
 
 * {
   box-sizing: border-box;
@@ -130,7 +130,7 @@ body,html {
   #image1 {
     position: absolute; 
     z-index: 2;
-    top: 300px;
+    top: 220px;
     left: 0px;
   }
 
